--- a/index.html
+++ b/index.html
@@ -1,15 +1,58 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DCC Semana 06</title>
 </head>
+
 <body>
     <h1>DCC202 Listas não ordenadas </h1>
     <p>Os três sobrinhos do Pato Donald são:</p>
-    <li>Huguinho</li>
-    <li>Zezinho</li>
-    <li>Luizinho</li>
+    <ul>
+        <li>Huguinho</li>
+        <li>Zezinho</li>
+        <li>Luizinho</li>
+    </ul>
+
+    <p>Os primeiros livros de tolkien na Terra Média foram, em ordem:</p>
+    <ol>
+        <li>O Hobbit</li>
+        <li>A sociedade do anel</li>
+        <li>Duas torres</li>
+        <li>O retorno do Rei</li>
+    </ol>
+
+    <p>As mais poderosas casas de Game of Thrones na primeira temporada/livro são:</p>
+    <ol>
+        <li>
+
+            <div>Baratheon</div>
+            <ol>
+                <li>Robert</li>
+                <li>Joffery</li>
+            </ol>
+
+        </li>
+
+        <li>Lanisters</li>
+        <li>Stark</li>
+
+    </ol>
+
+    <dl>
+        <div>
+            <dt>Bob Esponja</dt>
+            <dd>Cúbico amarelo de olhos grandes. Usa uma calça quadrada.</dd>
+        </div>
+
+        <div>
+            <dt>Bob Esponja</dt>
+            <dd>Cúbico amarelo de olhos grandes. Usa uma calça quadrada.</dd>
+        </div>
+    </dl>
+
 </body>
-</html>
+
+</html
